--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
 		"cookies-next": "^2.1.1",
 		"dayjs": "^1.11.4",
 		"extract-site-metadata": "^1.3.1",
+		"framer-motion": "^7.2.1",
 		"next": "12.2.3",
 		"next-remove-imports": "^1.0.6",
 		"react": "18.2.0",
 		"react-beautiful-dnd": "^13.1.0",
+		"react-device-detect": "^2.2.2",
 		"react-diff-viewer": "^3.1.1",
 		"react-dom": "18.2.0",
 		"react-markdown": "^8.0.3",
