--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-raw": "^6.1.1",
 		"rehype-sanitize": "^5.0.1",
+		"typewriter-effect": "^2.19.0",
 		"validator": "^13.7.0"
 	},
 	"devDependencies": {
