--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@mantine/rte": "^5.0.2",
 		"@radix-ui/react-icons": "^1.1.1",
 		"@types/react-beautiful-dnd": "^13.1.2",
+		"@types/react-syntax-highlighter": "^15.5.5",
 		"@types/validator": "^13.7.5",
 		"@uiw/react-markdown-preview": "^4.0.24",
 		"@uiw/react-md-editor": "^3.17.2",
@@ -43,9 +44,11 @@
 		"react-diff-viewer": "^3.1.1",
 		"react-dom": "18.2.0",
 		"react-markdown": "^8.0.3",
+		"react-syntax-highlighter": "^15.5.0",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-raw": "^6.1.1",
 		"rehype-sanitize": "^5.0.1",
+		"remark-gfm": "^3.0.1",
 		"typewriter-effect": "^2.19.0",
 		"validator": "^13.7.0"
 	},
