--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
 		"@mantine/prism": "^5.0.2",
 		"@mantine/rte": "^5.0.2",
 		"@radix-ui/react-icons": "^1.1.1",
-		"@types/react-beautiful-dnd": "^13.1.2",
-		"@types/react-syntax-highlighter": "^15.5.5",
-		"@types/validator": "^13.7.5",
 		"@uiw/react-markdown-preview": "^4.0.24",
 		"@uiw/react-md-editor": "^3.17.2",
 		"axios": "^0.27.2",
@@ -44,6 +41,8 @@
 		"react-diff-viewer": "^3.1.1",
 		"react-dom": "18.2.0",
 		"react-markdown": "^8.0.3",
+		"react-scroll-progress-bar": "^1.1.13",
+		"react-share": "^4.4.0",
 		"react-syntax-highlighter": "^15.5.0",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-raw": "^6.1.1",
@@ -55,7 +54,10 @@
 	"devDependencies": {
 		"@types/node": "18.6.1",
 		"@types/react": "18.0.15",
+		"@types/react-beautiful-dnd": "^13.1.2",
 		"@types/react-dom": "18.0.6",
+		"@types/react-syntax-highlighter": "^15.5.5",
+		"@types/validator": "^13.7.5",
 		"eslint": "8.20.0",
 		"eslint-config-next": "12.2.3",
 		"eslint-config-prettier": "^8.5.0",
