--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.0",
 		"@emotion/server": "^11.10.0",
+		"@giscus/react": "^2.2.0",
 		"@mantine/core": "^5.0.2",
 		"@mantine/dates": "^5.0.2",
 		"@mantine/dropzone": "^5.0.2",
