--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"rehype-sanitize": "^5.0.1",
 		"remark-gfm": "^3.0.1",
 		"typewriter-effect": "^2.19.0",
+		"universal-cookie": "^4.0.4",
 		"validator": "^13.7.0"
 	},
 	"devDependencies": {
