use xata postgres beta
change xata usage to the postgres beta and added script to sync the schema. We can also now run the sql command to sync the local schema with the xata db

--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "tsx drizzle/migrate.ts",
     "db:test": "tsx drizzle/test.ts",
     "db:seed": "tsx drizzle/seed.ts",
-    "db:drop": "drizzle-kit drop",
-    "db:pull": "drizzle-kit introspect",
+    "db:xata-pull": "tsx script/xata-pull.ts",
+    "db:clean-sql": "tsx script/clean-sql.ts",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
-    "db:check": "drizzle-kit check"
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@blocknote/core": "^0.13.2",
@@ -37,9 +35,10 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^2.47.0",
     "@tanstack/react-query": "^5.37.1",
+    "@types/pg": "^8.11.6",
     "@types/validator": "^13.11.9",
-    "@xata.io/client": "0.29.4",
-    "@xata.io/drizzle": "^0.0.21",
+    "@xata.io/client": "0.0.0-next.v0b9131efdfa1340c28d4ce9bd73d6c4854e7c140",
+    "@xata.io/drizzle": "0.0.0-next.v0b9131efdfa1340c28d4ce9bd73d6c4854e7c140",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
@@ -52,6 +51,7 @@
     "moment": "^2.30.1",
     "next": "14.2.3",
     "oslo": "^1.2.0",
+    "pg": "^8.11.5",
     "pino": "^9.1.0",
     "pino-logflare": "^0.4.2",
     "react": "^18",
