--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@edge-csrf/nextjs": "^2.0.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@mantine/code-highlight": "^7.10.1",
+    "@mantine/colors-generator": "^7.10.1",
     "@mantine/core": "7.9.2",
     "@mantine/dates": "^7.10.1",
     "@mantine/dropzone": "^7.10.1",
@@ -35,6 +36,7 @@
     "@tanstack/react-query": "^5.40.0",
     "@types/pg": "^8.11.6",
     "@types/validator": "^13.11.10",
+    "chroma-js": "^2.4.2",
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
@@ -50,18 +52,22 @@
     "mantine-react-table": "2.0.0-beta.3",
     "moment": "^2.30.1",
     "next": "14.2.3",
+    "next-view-transitions": "^0.2.0",
     "oslo": "^1.2.0",
     "pg": "^8.11.5",
     "pino": "^9.1.0",
     "pino-logflare": "^0.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "tailwind-merge": "^2.3.0",
     "uuid": "^9.0.1",
     "validator": "^13.12.0",
     "winston": "^3.13.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/lodash": "^4.17.4",
     "@types/node": "^20.12.13",
@@ -77,6 +83,7 @@
     "postcss-preset-mantine": "1.13.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.2.5",
+    "prettier-plugin-classnames": "^0.6.6",
     "tailwindcss": "^3.4.3",
     "tsx": "^4.11.0"
   }
