--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,5 @@ CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 LOGFLARE_API_KEY=
 LOGFLARE_SOURCE_TOKEN=
-CLEAN_SESSIONS_SECRET=
+CRON_SECRET=
 UMAMI_ID=
