--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-query": "^5.40.0",
     "@types/pg": "^8.11.6",
     "@types/validator": "^13.11.10",
+    "@vercel/speed-insights": "^1.0.11",
     "chroma-js": "^2.4.2",
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
