--- a/package.json
+++ b/package.json
@@ -15,77 +15,77 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@blocknote/core": "^0.13.4",
-    "@blocknote/mantine": "^0.13.4",
-    "@blocknote/react": "^0.13.4",
-    "@edge-csrf/nextjs": "^2.0.0",
+    "@blocknote/core": "^0.15.0",
+    "@blocknote/mantine": "0.15.0",
+    "@blocknote/react": "^0.15.0",
+    "@edge-csrf/nextjs": "^2.2.2",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
-    "@mantine/code-highlight": "^7.10.1",
-    "@mantine/colors-generator": "^7.10.1",
-    "@mantine/core": "7.9.2",
-    "@mantine/dates": "^7.10.1",
-    "@mantine/dropzone": "^7.10.1",
-    "@mantine/form": "^7.10.1",
-    "@mantine/hooks": "7.9.2",
-    "@mantine/modals": "^7.10.1",
-    "@mantine/notifications": "^7.10.1",
-    "@mantine/nprogress": "^7.10.1",
+    "@mantine/code-highlight": "^7.11.2",
+    "@mantine/colors-generator": "^7.11.2",
+    "@mantine/core": "7.11.2",
+    "@mantine/dates": "^7.11.2",
+    "@mantine/dropzone": "^7.11.2",
+    "@mantine/form": "^7.11.2",
+    "@mantine/hooks": "7.11.2",
+    "@mantine/modals": "^7.11.2",
+    "@mantine/notifications": "^7.11.2",
+    "@mantine/nprogress": "^7.11.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tabler/icons-react": "^2.47.0",
-    "@tanstack/react-query": "^5.40.0",
+    "@tanstack/react-query": "^5.51.5",
     "@types/pg": "^8.11.6",
-    "@types/validator": "^13.11.10",
-    "@vercel/speed-insights": "^1.0.11",
+    "@types/validator": "^13.12.0",
+    "@vercel/speed-insights": "^1.0.12",
     "chroma-js": "^2.4.2",
-    "cloudinary": "^2.2.0",
+    "cloudinary": "^2.3.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.31.0",
+    "drizzle-orm": "^0.32.0",
     "drizzle-zod": "^0.5.1",
-    "fp-ts": "^2.16.6",
+    "fp-ts": "^2.16.8",
     "io-ts": "^2.2.21",
     "lodash": "^4.17.21",
-    "lru-cache": "^10.2.2",
+    "lru-cache": "^11.0.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.379.0",
     "mantine-react-table": "2.0.0-beta.3",
     "moment": "^2.30.1",
     "next": "14.2.3",
     "next-view-transitions": "^0.2.0",
-    "oslo": "^1.2.0",
-    "pg": "^8.11.5",
-    "pino": "^9.1.0",
+    "oslo": "^1.2.1",
+    "pg": "^8.12.0",
+    "pino": "^9.3.1",
     "pino-logflare": "^0.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "tailwind-merge": "^2.3.0",
-    "uuid": "^9.0.1",
+    "tailwind-merge": "^2.4.0",
+    "uuid": "10.0.0",
     "validator": "^13.12.0",
-    "winston": "^3.13.0",
+    "winston": "^3.13.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/lodash": "^4.17.4",
-    "@types/node": "^20.12.13",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.22.1",
+    "drizzle-kit": "^0.23.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "14.2.5",
     "eslint-plugin-unused-imports": "^3.2.0",
-    "pino-pretty": "^11.1.0",
-    "postcss": "^8.4.38",
+    "pino-pretty": "^11.2.1",
+    "postcss": "^8.4.39",
     "postcss-preset-mantine": "1.13.0",
     "postcss-simple-vars": "^7.0.1",
-    "prettier": "^3.2.5",
-    "prettier-plugin-classnames": "^0.6.6",
-    "tailwindcss": "^3.4.3",
-    "tsx": "^4.11.0"
+    "prettier": "^3.3.3",
+    "prettier-plugin-classnames": "0.7.0",
+    "tailwindcss": "^3.4.6",
+    "tsx": "^4.16.2"
   }
 }
