--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
+    "test": "vitest",
     "db:test": "tsx drizzle/test.ts",
     "db:seed": "tsx drizzle/seed.ts",
     "db:generate": "drizzle-kit generate",
@@ -74,6 +75,7 @@
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/sinon": "^17.0.3",
     "autoprefixer": "^10.4.19",
     "drizzle-kit": "^0.23.0",
     "eslint": "^8.57.0",
@@ -85,7 +87,9 @@
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.3",
     "prettier-plugin-classnames": "0.7.0",
+    "sinon": "^18.0.0",
     "tailwindcss": "^3.4.6",
-    "tsx": "^4.16.2"
+    "tsx": "^4.16.2",
+    "vitest": "^2.0.3"
   }
 }
